fix:io_exception_on_Mac, hide scrollBar

--- a/src/main/resources/timeline_style.css
+++ b/src/main/resources/timeline_style.css
@@ -1,8 +1,3 @@
-/*
-    Created on : 11 Nov, 2017, 4:42:53 AM
-    Author     : afsal villan
-*/
-
 * {
     -fx-primary: #2A2E37;
     -fx-secondary: #FFFF8D;
@@ -36,7 +31,6 @@
 }
 
 .text-area {
-    -fx-text-fill: -fx-primarytext;
     -fx-font-size: 12pt;
     -jfx-focus-color: -fx-secondary;
     -fx-text-fill: derive(-fx-secondary, 20%);
@@ -142,100 +136,6 @@
     -fx-background-color: derive(-fx-primary, 5%);
 }
 
-/*TableView Default*/
-.table-view {
-    -fx-background-color: derive(-fx-primary, 10%);
-    -fx-font-size: 16px;
-    -fx-border-color: derive(-fx-secondary, -60%);
-}
-
-.table-view:focused {
-    -fx-background-color: derive(-fx-primary, 20%);
-}
-
-.table-row-cell {
-    -fx-cell-size: 40px;
-}
-
-.table-view .column-header-background {
-    -fx-background-color: -fx-primary;
-}
-
-.table-view .column-header-background .label {
-    -fx-background-color: transparent;
-    -fx-text-fill: white;
-}
-
-.table-view .column-header {
-    -fx-background-color: transparent;
-}
-
-.table-view .table-cell {
-    -fx-text-fill: white;
-}
-
-.table-row-cell:focused, .table-cell:focused {
-    -fx-text-fill: -fx-primary;
-}
-
-.table-row-cell {
-    -fx-background-color: -fx-primary;
-    -fx-border-color: transparent;
-    -fx-table-cell-border-color: transparent;
-}
-
-.table-column {
-    -fx-alignment: CENTER;
-}
-
-.table-row-cell:even {
-    -fx-background-color: derive(-fx-primary, 10%);
-}
-
-.table-row-cell:selected {
-    -fx-background-color: -fx-secondary;
-    -fx-text-fill: -fx-primary;
-    -fx-background-insets: 0;
-}
-
-.table-row-cell:selected .table-cell {
-    -fx-text-fill: -fx-primary;
-}
-
-.placeholder .label {
-    -fx-text-fill: white;
-}
-
-.table-view > .virtual-flow > .scroll-bar:vertical,
-.table-view > .virtual-flow > .scroll-bar:vertical > .track,
-.table-view > .virtual-flow > .scroll-bar:vertical > .track-background,
-.table-view > .virtual-flow > .scroll-bar:horizontal,
-.table-view > .virtual-flow > .scroll-bar:horizontal > .track,
-.table-view > .virtual-flow > .scroll-bar:horizontal > .track-background {
-    -fx-background-color: transparent;
-}
-
-.table-view > .virtual-flow > .scroll-bar > .increment-button,
-.table-view > .virtual-flow > .scroll-bar > .decrement-button {
-    -fx-text-fill: white;
-}
-
-.scroll-bar:horizontal .thumb,
-.scroll-bar:vertical .thumb {
-    -fx-background-color: derive(darkgray, 60%);
-    -fx-border-color: transparent;
-    -fx-background-radius: 5em;
-}
-
-.table-view .filler {
-    -fx-fill: -fx-primary;
-    -fx-background-color: -fx-primary;
-}
-
-.table-context {
-    -fx-base: -fx-primary;
-}
-
 /*JFXDialog styling*/
 .jfx-layout-heading {
     -fx-background-color: -fx-secondary;
@@ -280,4 +180,11 @@
     -fx-fill: white;
     -fx-font-size: 24px;
     -fx-text-alignment: center;
+}
+
+.scroll-bar {
+    -fx-opacity: 0;
+    -fx-padding: -7;
+    -fx-max-width: 0;
+    -fx-pref-width: 0;
 }
